# higs

./: HindaSim.cc~  Makefile  README  tags
HindaSim/: CMakeLists.txt  GNUmakefile  Makefile  README  README~  beamCalc.root  beam_profile_65MeV.root  myHindaSim.cc  tags  test2.root
HindaSim/include/: AllMaterials.hh~  AllProcesses.hh  DataManager.hh  EventActionMessenger.hh  HINDAArray.hh  HINDACore.hh  HINDAShield.hh  HadronicProcesses.hh  HindaPhysicsListMessenger.hh  MoreUnits.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh~  PrimaryGeneratorMessenger.hh  oldDataManagerhh
HindaSim/macros/: HindaSetup.mac  HindaSetup.mac~  runHinda.mac~  vis.mac  vis.mac~
HindaSim/old_include/: AllMaterials.hh  AllParticles.hh  AllProcesses.hh~  HINDASD.hh  HadronicProcesses.hh  oldEventActionhh
HindaSim/old_src/: DataManager.cc~  DetectorMessenger.cc  EventAction.cc  ExperimentConstruction.cc  HindaPhysicsList.cc~  PrimaryGeneratorMessenger.cc  README  README~  RunAction.cc  SteppingAction.cc
HindaSim/src/: AllMaterials.cc~  AllProcesses.cc.old  AllProcesses.cc~  DataManager.cc~  EventActionMessenger.cc  ExperimentConstruction.cc  ExperimentConstruction.cc.cryo~  HINDAArray.cc  HINDAArray.cc.mark  HINDAArray.cc~  HINDACore.cc~  HINDASD.cc~  HINDAShield.cc~  HadronicProcesses.cc.old  HindaPhysicsListMessenger.hh~  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  README  RunAction.cc
HindaSim/y89_include/: DataManager.hh  HINDAArray.hh  HindaPhysicsList.hh  LeadShield.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
HindaSim/y89_src/: AllMaterials.cc.old  AllParticles.cc  DataManager.cc  DataManager.cc~  ExperimentConstruction.cc  HINDAArray.cc  HINDAArray.cc~  HindaPhysicsList.cc  LeadShield.cc  PrimaryGeneratorAction.cc~  SteppingVerbose.cc
include/: AllMaterials.hh  DetectorMessenger.hh  EventAction.hh  EventLinkDef.h  ExperimentConstruction.hh  ExperimentConstruction.hh.cryo  HINDAArray.hh.mark  HINDAArray.hh~  HINDACore.hh.mark  HindaPhysicsList.hh~  LeadShield.hh  MoreUnits.hh~  PhysicsList.hh.Aram
macros/: runHinda.mac  test.mac~
old_include/: AllMaterials.hh~  DataManager.hh  DataManager.hh~  DetectorMessenger.hh~  HINDASD.hh~  HINDAShield.hh  HadronicProcesses.hh~  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh~
old_src/: AllMaterials.cc~  DataManager.cc  EventAction.cc~  ExperimentConstruction.cc~  HINDACore.cc  HINDAShield.cc  HindaPhysicsListMessenger.cc  HindaPhysicsListMessenger.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  PrimaryGeneratorMessenger.cc~  RunAction.cc~
src/: AllMaterials.cc  AllProcesses_cc_4.9.2  DataManager.cc  DetectorMessenger.cc  EventAction.cc  EventAction.cc~  ExperimentConstruction.cc.cryo  ExperimentConstruction.cc.mark  ExperimentConstruction.cc~  HINDACore.cc  HINDACore.cc.mark  HINDAShield.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~
y89_include/: AllMaterials.hh.old  DataManager.hh~  EventAction.hh~  EventActionMessenger.hh~  ExperimentConstruction.hh  HindaPhysicsListMessenger.hh~  MoreUnits.hh  RunAction.hh  RunAction.hh~  SteppingVerbose.hh
y89_src/: AllMaterials.cc  DetectorMessenger.cc~  EventActionMessenger.cc~  HINDASD.cc~  PhysicsList.cc.Aram  PrimaryGeneratorAction.cc
